@startuml
!include style.puml
skinparam arrowThickness 1.1
skinparam arrowColor MODEL_COLOR
skinparam classBackgroundColor MODEL_COLOR

class "{abstract}\nPerson" as Person
class Member
class Applicant
class Name
class Phone
class Email
class Telegram
class Tag
class Task

Member -up-|> Person
Applicant -up-|> Person

Person -> "1" Name
Member -> "1" Phone
Member -down-> "1" Email
Member -down-> "1" Telegram
Member -down-> "*" Tag
Member -down-> "*" Task
Applicant -down-> "1" Phone
Applicant -down-> "1" InterviewTime

@enduml
